Fix scrollbar invasion to table row

--- a/Modern Table Column.css
+++ b/Modern Table Column.css
@@ -281,44 +281,44 @@
 	width: 100%;
 }
 
-[data-rem-container-tags~=w90],
-[data-rem-container-tags~=w120],
-[data-rem-container-tags~=w150],
-[data-rem-container-tags~=w180],
-[data-rem-container-tags~=w210],
-[data-rem-container-tags~=w240],
-[data-rem-container-tags~=w270],
-[data-rem-container-tags~=w300],
-[data-rem-container-tags~=w330],
-[data-rem-container-tags~=w360],
-[data-rem-container-tags~=w390],
-[data-rem-container-tags~=w420],
-[data-rem-container-tags~=w450],
-[data-rem-container-tags~=w480],
-[data-rem-container-tags~=w510],
-[data-rem-container-tags~=w540],
-[data-rem-container-tags~=w570],
-[data-rem-container-tags~=w600],
-[data-rem-container-tags~=w630],
-[data-rem-container-tags~=w660],
-[data-rem-container-tags~=w690],
-[data-rem-container-tags~=w720],
-[data-rem-container-tags~=w750],
-[data-rem-container-tags~=w780],
-[data-rem-container-tags~=w810],
-[data-rem-container-tags~=w840],
-[data-rem-container-tags~=w870],
-[data-rem-container-tags~=w900],
-[data-rem-container-tags~=w930],
-[data-rem-container-tags~=w960],
-[data-rem-container-tags~=w990],
-[data-rem-container-tags~=w1020],
-[data-rem-container-tags~=w1050],
-[data-rem-container-tags~=w1080],
-[data-rem-container-tags~=w1110],
-[data-rem-container-tags~=w1140],
-[data-rem-container-tags~=w1170],
-[data-rem-container-tags~=w1200] {
+[data-rem-tags~=table][data-rem-container-tags~=w90],
+[data-rem-tags~=table][data-rem-container-tags~=w120],
+[data-rem-tags~=table][data-rem-container-tags~=w150],
+[data-rem-tags~=table][data-rem-container-tags~=w180],
+[data-rem-tags~=table][data-rem-container-tags~=w210],
+[data-rem-tags~=table][data-rem-container-tags~=w240],
+[data-rem-tags~=table][data-rem-container-tags~=w270],
+[data-rem-tags~=table][data-rem-container-tags~=w300],
+[data-rem-tags~=table][data-rem-container-tags~=w330],
+[data-rem-tags~=table][data-rem-container-tags~=w360],
+[data-rem-tags~=table][data-rem-container-tags~=w390],
+[data-rem-tags~=table][data-rem-container-tags~=w420],
+[data-rem-tags~=table][data-rem-container-tags~=w450],
+[data-rem-tags~=table][data-rem-container-tags~=w480],
+[data-rem-tags~=table][data-rem-container-tags~=w510],
+[data-rem-tags~=table][data-rem-container-tags~=w540],
+[data-rem-tags~=table][data-rem-container-tags~=w570],
+[data-rem-tags~=table][data-rem-container-tags~=w600],
+[data-rem-tags~=table][data-rem-container-tags~=w630],
+[data-rem-tags~=table][data-rem-container-tags~=w660],
+[data-rem-tags~=table][data-rem-container-tags~=w690],
+[data-rem-tags~=table][data-rem-container-tags~=w720],
+[data-rem-tags~=table][data-rem-container-tags~=w750],
+[data-rem-tags~=table][data-rem-container-tags~=w780],
+[data-rem-tags~=table][data-rem-container-tags~=w810],
+[data-rem-tags~=table][data-rem-container-tags~=w840],
+[data-rem-tags~=table][data-rem-container-tags~=w870],
+[data-rem-tags~=table][data-rem-container-tags~=w900],
+[data-rem-tags~=table][data-rem-container-tags~=w930],
+[data-rem-tags~=table][data-rem-container-tags~=w960],
+[data-rem-tags~=table][data-rem-container-tags~=w990],
+[data-rem-tags~=table][data-rem-container-tags~=w1020],
+[data-rem-tags~=table][data-rem-container-tags~=w1050],
+[data-rem-tags~=table][data-rem-container-tags~=w1080],
+[data-rem-tags~=table][data-rem-container-tags~=w1110],
+[data-rem-tags~=table][data-rem-container-tags~=w1140],
+[data-rem-tags~=table][data-rem-container-tags~=w1170],
+[data-rem-tags~=table][data-rem-container-tags~=w1200] {
 	overflow: auto;
 	white-space: pre;
 }
